--- a/style.css
+++ b/style.css
@@ -1,4 +1,24 @@
-textarea {
-  width: 70%;
+.row {
+  width: 100%;
+}
+
+#codeColumn {
+  width: 67%;
+  float: left;
+}
+
+textarea#code {
+  width: 100%;
   height: 400px;
+}
+
+#feedbackColumn {
+  width: 27%;
+  height: 400px;
+  float: right;
+}
+
+textarea#structure {
+  width: 100%;
+  height: 100px;
 }
